--- a/PostAddressSearch/PostAddressSearch.csproj
+++ b/PostAddressSearch/PostAddressSearch.csproj
@@ -50,5 +50,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="SQL Scripts\AlterSystemSettings.sql" />
+    <Content Include="SQL Scripts\CreateRegionCodeTable.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
